--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 		<button id="btn" class = "butst">ㅤНачатьㅤ</button>
 		<button class = "butset">ㅤНастройкиㅤ</button>
 	</div>
-	<script src="script.js"></script>
+	<script src="script_main.js"></script>
 </body>
 </html>
