--- a/screen3.html
+++ b/screen3.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initual-scale=1.0">
 <title> Cliker</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styl.css">
 <body>
 	<div class = "image1">
 		<img src = 'clock.png';width = '150px' ; height='150px'></img>
