--- a/screen2.html
+++ b/screen2.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initual-scale=1.0">
 <title> Cliker</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style53.css">
 <body>
 
 	<div class= "container">
