--- a/screen3.html
+++ b/screen3.html
@@ -23,6 +23,6 @@
 	<div class = "knopka">	
 		<button>Запустить по новой</button>
 	</div>
-	<script src='script.js'></script>
+	<script src='script_333.js'></script>
 </body>
 </html>
