--- a/screen3.html
+++ b/screen3.html
@@ -20,7 +20,7 @@
 		<h1>Кол-во кликов: 34</h1>
 	</div>
 	
-	<div class = "knopka">	
+	<div id="bun" class = "knopka_zp">	
 		<button>Запустить по новой</button>
 	</div>
 	<script src='script_333.js'></script>
