--- a/screen3.html
+++ b/screen3.html
@@ -9,19 +9,19 @@
 		<img src = 'clock.png';width = '150px' ; height='150px'></img>
 	</div>
 		<div class= "paragraph">
-		<h1>Время вышло</h1>
+		<h1 class = "h1">Время вышло</h1>
 	</div>
 	<div class = 'image2'>
 		<img src = 'timer.png'width = '150px' ; height='170px'></img>
 	</div>
 
 	
-	<div class = "paragraph">
-		<h1>Кол-во кликов: 34</h1>
+	<div class = "container">
+		<h1 class = "p1">Кол-во кликов: 34</h1>
 	</div>
 	
-	<div id="bun" class = "knopka_zp">	
-		<button>Запустить по новой</button>
+	<div class = "container">
+	<button id="bun" class = "knopka_zp">Запустить по новой</button>
 	</div>
 	<script src='script_333.js'></script>
 </body>
